--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,6 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
+        android:background="@android:color/black"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -10,6 +11,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
+            android:background="@android:color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/btn_library">
@@ -38,7 +40,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/now_playing"
-                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:textColor="@android:color/white"
+                    android:textSize="40sp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toTopOf="@id/txt_song_name"
                     app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +51,11 @@
                     android:id="@+id/txt_song_name"
                     android:layout_width="wrap_content"
                     android:text="Song name"
+                    android:textAlignment="center"
                     android:layout_height="wrap_content"
+                    android:textColor="@android:color/white"
+                    android:textSize="15sp"
+                    android:alpha="1"
                     app:layout_constraintTop_toBottomOf="@id/txt_now_playing"
                     app:layout_constraintBottom_toTopOf="@id/txt_artist_name"
                     app:layout_constraintStart_toStartOf="parent"
@@ -56,6 +64,9 @@
                     android:id="@+id/txt_artist_name"
                     android:layout_width="wrap_content"
                     android:text="Song Artist"
+                    android:textColor="@android:color/white"
+                    android:textSize="15sp"
+                    android:alpha="1"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@id/txt_song_name"
                     app:layout_constraintBottom_toBottomOf="parent"
