--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -49,6 +49,6 @@
             android:layout_height="1dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:background="@android:color/darker_gray"/>
+            android:background="@color/colorBorderSeekBar"/>
 
 </LinearLayout>
